versioned_docs/version-0.9/tutorial/cli.md
# Command-Line Interface

## CLI Options
Below is a list of all available CLI (Command-Line Interface) options for the project, with a brief explanation of each.

### `-t, --tools <toolName|path:className[:key=value...]>`
- **Description**: Specify a tool to enable with optional configuration. Can be used multiple times. Can be a built-in tool name or path:className for external tools.
- **Example**: `-t "DumpCfg:format=dot"` or `-t "path/to/tool:CustomTool:param=value"`

### `-O, --output-path <PATH>`
- **Description**: Directory to save warnings or output generated by tools. If `<PATH>` is `-`, then stdout is used.
- **Default**: `-`

### `--list-tools`
- **Description**: List available tools and their options.
- **Default**: `false`

### `-o, --output-format <json|plain|sarif>`
- **Description**: Set the output format for all tools and warnings.
- **Default**: `plain`

### `-C, --no-colors`
- **Description**: Disables ANSI colors in the output.
- **Default**: `false`

### `--souffle-binary <PATH>`
- **Description**: Path to the Soufflé binary.
- **Default**: `"souffle"`

### `--souffle-path <PATH>`
- **Description**: Directory to save generated Soufflé files.
- **Default**: `"/tmp/misti/souffle"`

### `--souffle-verbose`
- **Description**: Generate human-readable, but more verbose, Soufflé files.
- **Default**: `false`

### `--no-souffle`
- **Description**: Disable Soufflé detectors.
- **Default**: `false`

### `--tact-stdlib-path <PATH>`
- **Description**: Path to the Tact standard library.

### `-v, --verbose`
- **Description**: Enable verbose output.
- **Default**: `false`

### `-q, --quiet`
- **Description**: Suppress output.
- **Default**: `false`

### `-m, --min-severity <info|low|medium|high|critical>`
- **Description**: Minimum level of severity to report.
- **Default**: `info`

### `-de, --enabled-detectors <name|path:name>`
- **Description**: A comma-separated list of detectors to enable.
- **Argument Validation**: Requires a non-empty list of detector names.

### `-dd, --disabled-detectors <names>`
- **Description**: A comma-separated list of names of detectors to disable.
- **Argument Validation**: Requires a non-empty list of detector names.

### `-A, --all-detectors`
- **Description**: Enable all the available built-in detectors.
- **Default**: `false`

### `-c, --config <PATH>`
- **Description**: Path to the Misti configuration file.

### `--list-detectors`
- **Description**: List available built-in detectors.
- **Default**: `false`

## Exit Codes
Misti returns different exit codes depending on the execution result:
- **0**: Successful execution with no warnings or errors.
- **1**: Warnings were reported.
- **2**: Execution failed due to an internal or execution error.
